Initial support for parsing and displaying XML files in APIView (#1869)
* Initial support for parsing and displaying XML files in APIView, which will be useful for Maven BOM support.

--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Index.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Index.cshtml
@@ -26,6 +26,7 @@
             <a class="btn btn-secondary" active-if='@Model.Language == "Python"' asp-all-route-data=@Model.GetRoutingData(language: "Python")>Python</a>
             <a class="btn btn-secondary" active-if='@Model.Language == "Protocol"' asp-all-route-data=@Model.GetRoutingData(language: "Protocol")>Protocol</a>
             <a class="btn btn-secondary" active-if='@Model.Language == "Swift"' asp-all-route-data=@Model.GetRoutingData(language: "Swift")>Swift</a>
+            <a class="btn btn-secondary" active-if='@Model.Language == "Xml"' asp-all-route-data=@Model.GetRoutingData(language: "Xml")>Xml</a>
         </div>
 
         <div class="btn-group float-right">
