APIview misc fixes (#1875)
* Allow non-owwner to close or reopen reviews

--- a/src/dotnet/APIView/APIViewWeb/Client/css/site.scss
+++ b/src/dotnet/APIView/APIViewWeb/Client/css/site.scss
@@ -330,8 +330,9 @@ code-inner {
     margin: -8px -16px;
 }
 
-.btn-upvote {
+.btn-upvote span {
     filter: grayscale(100%) opacity(30%);
+
     &.active {
         filter: unset;
     }
