--- a/src/dotnet/APIView/APIViewWeb/Pages/Shared/_CommentThreadPartial.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Shared/_CommentThreadPartial.cshtml
@@ -21,12 +21,14 @@
                             <div class="comment-actions">
                                 <form data-post-update="comments" asp-controller="Comments" asp-action="ToggleUpvote" method="post" asp-route-reviewId="@Model.ReviewId">
                                     <input type="hidden" name="commentId" value="@comment.CommentId" />
-                                    <button type="submit" class="btn btn-light btn-sm btn-upvote" title="@string.Join(", ", comment.Upvotes) " active-if="@comment.Upvotes.Contains(User.GetGitHubLogin())">
-                                        @if (comment.Upvotes.Any())
-                                        {
-                                            @comment.Upvotes.Count
+                                    <button type="submit" class="btn btn-light btn-sm btn-upvote" title="@string.Join(", ", comment.Upvotes)" active-if="@comment.Upvotes.Contains(User.GetGitHubLogin())">
+                                        @{
+                                            if (comment.Upvotes.Any())
+                                            {
+                                                @comment.Upvotes.Count
+                                            }
+                                            <span active-if="@comment.Upvotes.Any()">👍</span>
                                         }
-                                        👍
                                     </button>
                                 </form>
 
