Resolve error loading `active` w/ `UriRegexSanitizer`. Update `Admin/Reset` to `POST` (#2014)
* /Admin/Reset should definitely be a POST. not a GET

* resolve null reference exception for arguments during parse of the 'active' extensions

* output a final newline

--- a/tools/test-proxy/Azure.Sdk.Tools.TestProxy/Views/Info/ActiveExtensions.cshtml
+++ b/tools/test-proxy/Azure.Sdk.Tools.TestProxy/Views/Info/ActiveExtensions.cshtml
@@ -21,7 +21,8 @@
         The below extensions are currently configured.
     </p>
     <p>
-        To observe other extensions are can be added to your session, visit <a href="/Info/Available">/Info/Available</a>.
+        To observe ALL extensions (rather than just what is currently active), visit <a href="/Info/Available">/Info/Available</a>. For clarity, note that argument values below are surrounded in quotes. The actual value itself being utilized by
+        the test-proxy does not contain these quotes.
     </p>
     @if (Model.Sanitizers.Count() >= 0)
     {
