--- a/src/dotnet/APIView/APIViewWeb/Client/css/site.scss
+++ b/src/dotnet/APIView/APIViewWeb/Client/css/site.scss
@@ -155,6 +155,8 @@ form.comment {
 
 .comment-holder {
     max-width: 780px;
+    position: sticky;
+    left: 10px;
 }
 
 .comment-icon {
@@ -208,12 +210,20 @@ form.comment {
     tab-size: 8;
     border-spacing: 0;
     background-color: white; // prevents code-window from overlapping stickySidebar
-    table-layout: fixed;
     width: 100%;
 }
 
+.code-lines-header {
+    border-bottom: 1px solid #DEE2E6;
+    vertical-align: middle;
+    padding-top: 9px;
+    padding-left: 10px;
+    font-size: small;
+    font-weight: normal;
+}
+
 .code-line {
-    white-space: pre-wrap;
+    display: table-row;
     font-family: Consolas, monospace;
     line-height: 20px;
 }
@@ -240,6 +250,27 @@ form.comment {
     animation: glow normal 1.5s ease-in-out;
 }
 
+.line-number {
+    width: 1%;
+    min-width: 50px;
+    padding-left: 10px;
+    padding-right: 12px;
+    text-align: right;
+    white-space: nowrap;
+    cursor: pointer;
+    vertical-align: top;
+    border-right: 1px solid #DEE2E6;
+    background-color: white;
+    z-index:1;
+    position: sticky;
+    left: 0;
+    color: darkcyan;
+}
+
+.line-number-hidden {
+    display: none;
+}
+
 .line-comment-button:hover {
     transform: scale(1);
 }
@@ -247,10 +278,9 @@ form.comment {
 .line-comment-button {
     position: relative;
     z-index: 5;
-    float: left;
+    float: right;
     width: 22px;
     height: 22px;
-    margin: -2px -10px -2px -20px;
     line-height: 21px;
     color: #fff !important;
     text-align: center;
@@ -267,19 +297,24 @@ form.comment {
     text-decoration: none;
 }
 
+.line-comment-button-cell {
+    user-select: none;
+    width: 1em;
+    white-space: normal;
+    positon: sticky;
+    left: 0px;
+}
+
 .code {
-    line-height: 20px;
-    padding-left: 10px;
     padding-right: 10px;
     position: relative;
     vertical-align: top;
-    width: 100%;
 }
 
-code-inner {
-    color: #24292E;
+.code-inner {
     overflow: visible;
     word-wrap: normal;
+    white-space: pre;
 }
 
 .rounded-1 {
@@ -357,18 +392,6 @@ code-inner {
     font-size: 14px;
 }
 
-.line-comment-button-cell {
-    user-select: none;
-    width: 1em;
-    white-space: normal;
-}
-
-.line-comment-button-cell::before {
-    display: block;
-    height: 0;
-    width: 0;
-}
-
 .btn-link.line-comment-button {
     border: 0;
     opacity: 0;
@@ -393,7 +416,10 @@ code-inner {
 
 #review-right {
     // Override values from bootsrap
-    max-width: none;
+    max-width: 100%;
+    min-width: 100px;
+    overflow-x: auto;
+    padding: 0px;
 }
 
 .gutter {
@@ -480,6 +506,13 @@ code-inner {
 
 .code-diagnostics p {
     margin: 0;
+}
+
+.code-diagnostics div {
+    position: sticky;
+    left: 0px;
+    padding-left: 10px;
+    max-width: 2000px;
 }
 
 /* ICONS */
