feat: update go testgen to be compatible with codegen preview 31 (#2193)
* feat: update go testgen to be compatible with codegen preview 31

* feat: add file prefix for auto-generated example/test files for go

* build: release @autorest/gotest_v1.0.0

--- a/tools/sdk-testgen/packages/autorest.gotest/src/template/exampleTest.go.njk
+++ b/tools/sdk-testgen/packages/autorest.gotest/src/template/exampleTest.go.njk
@@ -10,7 +10,6 @@ import (
 	"log"
 
 	"github.com/Azure/azure-sdk-for-go/sdk/azcore"
-	"github.com/Azure/azure-sdk-for-go/sdk/azcore/arm"
 	"github.com/Azure/azure-sdk-for-go/sdk/azidentity"
 	"{{packagePath}}"
 )
@@ -25,9 +24,8 @@ func Example{{example.operationGroup.language.go.name}}Client_{{example.opName}}
 	if err != nil {
 		log.Fatalf("failed to obtain a credential: %v", err)
 	}
-	con := arm.NewDefaultConnection(cred, nil)
 	ctx := context.Background()
-	client := {{packageName}}.New{{example.operationGroup.language.go.name}}Client({{example.clientParametersOutputForExample}})
+	client := {{packageName}}.New{{example.operationGroup.language.go.name}}Client({{example.clientParametersOutputForExample + ", " if example.clientParametersOutputForExample else ""}}cred, nil)
 
 	{%- if example.returnInfo.length == 2 %}
 	{%- if example.isLRO %}
