--- a/tools/sdk-testgen/packages/autorest.gotest/src/template/mockTest.go.njk
+++ b/tools/sdk-testgen/packages/autorest.gotest/src/template/mockTest.go.njk
@@ -23,10 +23,9 @@ import (
 
 var (
 	ctx            context.Context
-	subscriptionId string
+    options        arm.ClientOptions
 	cred           azcore.TokenCredential
 	err            error
-	con            *arm.Connection
 	mockHost       string
 )
 
@@ -45,7 +44,7 @@ func Test{{exampleGroup.operationId}}(t *testing.T) {
 			t.Fatal("stacktrace from panic: \n" + string(debug.Stack()))
 		}
 	}()
-	client := New{{example.operationGroup.language.go.name}}Client({{example.clientParametersOutput}})
+	client := New{{example.operationGroup.language.go.name}}Client({{example.clientParametersOutput + ", " if example.clientParametersOutput else ""}}cred, &options)
 	{%- endif %}
 	{%- if example.returnInfo.length == 2 %}
 	{%- if example.isLRO %}
@@ -117,7 +116,6 @@ func getEnv(key, fallback string) string {
 
 func setUp() {
 	ctx = context.Background()
-	subscriptionId = getEnv("SUBSCRIPTION_ID", "00000000-0000-0000-0000-000000000000")
 	mockHost = getEnv("AZURE_VIRTUAL_SERVER_HOST", "https://localhost:8443")
 
 	tr := &http.Transport{}
@@ -126,17 +124,27 @@ func setUp() {
 	}
 	tr.TLSClientConfig.InsecureSkipVerify = true
 	client := &http.Client{Transport: tr}
-	cred, err = azidentity.NewEnvironmentCredential(&azidentity.EnvironmentCredentialOptions{AuthorityHost: mockHost, HTTPClient: client})
+	
+    cred, err = azidentity.NewEnvironmentCredential(
+		&azidentity.EnvironmentCredentialOptions{
+			AuthorityHost: azidentity.AuthorityHost(mockHost), 
+			ClientOptions: azcore.ClientOptions{
+				Transport: client,
+			},
+		})
 	if err != nil {
 		panic(err)
 	}
 
-	con = arm.NewConnection(mockHost, cred, &arm.ConnectionOptions{
-		Logging: policy.LogOptions{
-			IncludeBody: true,
+	options = arm.ClientOptions{
+		ClientOptions: policy.ClientOptions{
+			Logging: policy.LogOptions{
+				IncludeBody: true,
+			},
+			Transport: client,
 		},
-		HTTPClient: client,
-	})
+		Host: arm.Endpoint(mockHost),
+	}
 }
 
 func tearDown() {
