for sdk-testgen/testmodeler (#2229)
* add operationGrou&operation in ExampleGroup

don't sent to parent if already handled

unittest

output

test

fix

filter by usedProperties

* remove-redundant-code

* upload-test

* fix

* fix-lint

--- a/tools/sdk-testgen/packages/autorest.gotest/src/template/mockTest.go.njk
+++ b/tools/sdk-testgen/packages/autorest.gotest/src/template/mockTest.go.njk
@@ -30,7 +30,7 @@ var (
 )
 
 {% for exampleGroup in exampleGroups %}
-func Test{{exampleGroup.operationId}}(t *testing.T) {
+func Test{{exampleGroup.operationGroup.$key}}_{{exampleGroup.operation.language.go.name}}(t *testing.T) {
 {%- for example in exampleGroup.examples %}
     // From example {{example.name}}
 	{%- if config.testmodeler.mock['send-example-id'] %}
