--- a/tools/sdk-testgen/packages/autorest.gotest/src/template/mockTest.go.njk
+++ b/tools/sdk-testgen/packages/autorest.gotest/src/template/mockTest.go.njk
@@ -30,7 +30,7 @@ var (
 )
 
 {% for exampleGroup in exampleGroups %}
-func Test{{exampleGroup.operationGroup.$key}}_{{exampleGroup.operation.language.go.name}}(t *testing.T) {
+func Test{{exampleGroup.operationGroup.language.go.name}}_{{exampleGroup.operation.language.go.name}}(t *testing.T) {
 {%- for example in exampleGroup.examples %}
     // From example {{example.name}}
 	{%- if config.testmodeler.mock['send-example-id'] %}
