--- a/tools/sdk-testgen/packages/autorest.gotest/src/template/scenarioContent.go.njk
+++ b/tools/sdk-testgen/packages/autorest.gotest/src/template/scenarioContent.go.njk
@@ -40,15 +40,25 @@
 			if err := {{pagerVariable}}.Err(); err != nil {
 				t.Fatalf("failed to advance page: %v\n %v", err, string(debug.Stack()))
 			}
-			for _, v := range {{pagerVariable}}.PageResponse().Value {
+			for _, v := range {{pagerVariable}}.PageResponse().{{example.pageableItemName}} {
                 log.Printf("Pager result: %#v\n", v)
 			}
 		}
 		{%- else %}
 		{{clientVariable}}.{{example.opName}}({{example.methodParametersOutput}})
 		{%- endif %}
+        {%- if example.isLRO and example.isPageable and example.checkResponse %}
+        for {{resVariable}}.NextPage(ctx) {
+            if err := {{resVariable}}.Err(); err != nil {
+                t.Fatalf("failed to advance page: %v\n %v", err, string(debug.Stack()))
+            }
+            for _, v := range {{resVariable}}.PageResponse().{{example.pageableItemName}} {
+                t.Logf("Pager result: %#v\n", v)
+            }
+        }
+        {%- endif %}
 		{%- if example.checkResponse and not example.isPageable%}
-        log.Printf("Response result: %#v\n", {{resVariable}}.{{example.operationGroup.language.go.name}}{{example.operation.language.go.name}}Result)
+        log.Printf("Response result: %#v\n", {{resVariable}}.{% if example.isMultiRespOperation %}Value{% else %}{{example.operationGroup.language.go.name}}{{example.operation.language.go.name}}Result{% endif %})
 
 		{%- for outputVariableName, variableProperties in step.outputVariables%}
 		{%- if loop.first %}
