Add response check for go mock test generation (#2467)
* feat: add verify-response flag and refactor config method

* feat: add request check with send-example-id flag

* feat: upgrade dep version

* refactor: config get set

* feat: add response check to mock test generation, do some bug fix and refactor

* chore: add rush change files

--- a/tools/sdk-testgen/packages/autorest.gotest/src/template/exampleTest.go.njk
+++ b/tools/sdk-testgen/packages/autorest.gotest/src/template/exampleTest.go.njk
@@ -15,6 +15,7 @@ import (
 {{imports}}
 
 {%- for exampleGroup in exampleGroups %}
+{% if exampleGroup.operation.language.default.name == exampleGroup.operation.language.go.name %}
 {%- for example in exampleGroup.examples %}
 {%- if loop.first %}
 // x-ms-original-file: {{example.originalFile}}
@@ -70,4 +71,5 @@ func Example{{example.operationGroup.language.go.clientName}}_{{example.opName}}
 }
 {% endif %}
 {%- endfor %}
+{% endif %}
 {%- endfor %}
