--- a/tools/sdk-testgen/packages/autorest.gotest/src/template/mockTest.go.njk
+++ b/tools/sdk-testgen/packages/autorest.gotest/src/template/mockTest.go.njk
@@ -46,6 +46,8 @@ func Test{{exampleGroup.operationGroup.language.go.name}}_{{exampleGroup.operati
 		}
 	}()
 	client := {{packageName}}.{{example.operationGroup.language.go.clientCtorName}}({{example.clientParametersOutput + ", " if example.clientParametersOutput else ""}}cred, &options)
+    {%- else %}
+    client = {{packageName}}.{{example.operationGroup.language.go.clientCtorName}}({{example.clientParametersOutput + ", " if example.clientParametersOutput else ""}}cred, &options)
 	{%- endif %}
 	{%- if example.returnInfo.length == 2 %}
         {%- if example.isLRO %}
@@ -64,19 +66,27 @@ func Test{{exampleGroup.operationGroup.language.go.name}}_{{exampleGroup.operati
         {%- endif %}
     {%- elif  (example.returnInfo.length == 1) and (example.isPageable) %}
         pager {% if loop.first %}:{% endif %}= client.{{example.opName}}({{example.methodParametersOutput}})
-        for pager.NextPage(ctx) {
+        for {
+            nextResult := pager.NextPage(ctx)
             if err := pager.Err(); err != nil {
                 t.Fatalf("failed to advance page: %v", err)
             }
             {%- if example.checkResponse and verifyResponse%}
             // Response check
-            {
+            if nextResult {
                 pagerExampleRes := {{example.responseOutput}}
                 if !reflect.DeepEqual(pagerExampleRes, {% if example.responseTypePointer %}*{% endif %}pager.PageResponse().{{example.responseType}}) {
                     exampleResJson, _ := json.Marshal(pagerExampleRes)
                     mockResJson, _ := json.Marshal({% if example.responseTypePointer %}*{% endif %}pager.PageResponse().{{example.responseType}})
                     t.Fatalf("Mock response is not equal to example response:\nmock response: %s\nexample response: %s", mockResJson, exampleResJson)
                 }
+            } else {
+                t.Logf("Page end.")
+                break
+            }
+            {%- else %}
+            if !nextResult {
+                break
             }
             {%- endif %}
         }
@@ -85,19 +95,27 @@ func Test{{exampleGroup.operationGroup.language.go.name}}_{{exampleGroup.operati
     {%- endif %}
 
     {%- if example.isLRO and example.isPageable and example.checkResponse %}
-        for res.NextPage(ctx) {
+        for {
+            nextResult := res.NextPage(ctx)
             if err := res.Err(); err != nil {
                 t.Fatalf("failed to advance page: %v", err)
             }
             {%- if example.checkResponse and verifyResponse%}
             // Response check
-            {
+            if nextResult {
                 pagerExampleRes := {{example.responseOutput}}
                 if !reflect.DeepEqual(pagerExampleRes, {% if example.responseTypePointer %}*{% endif %}res.PageResponse().{{example.responseType}}) {
                     exampleResJson, _ := json.Marshal(pagerExampleRes)
                     mockResJson, _ := json.Marshal({% if example.responseTypePointer %}*{% endif %}res.PageResponse().{{example.responseType}})
                     t.Fatalf("Mock response is not equal to example response:\nmock response: %s\nexample response: %s", mockResJson, exampleResJson)
                 }
+            } else {
+                t.Logf("Page end.")
+                break
+            }
+            {%- else %}
+            if !nextResult {
+                break
             }
             {%- endif %}
         }
