sdk-testgen: testmodeler: load new api scenario  (#2516)
* upgrade to oav@2.10.2
* publish testmodeler&gotest

--- a/tools/sdk-testgen/packages/autorest.gotest/src/template/scenarioContent.go.njk
+++ b/tools/sdk-testgen/packages/autorest.gotest/src/template/scenarioContent.go.njk
@@ -91,7 +91,7 @@
 		{%- else %}
 		{%- set deploymentVariable = "_" %}
 		{%- endif %}
-	{{deploymentVariable}}, err = createDeployment(ctx, "{{step.step}}", getAnyJson([]byte(`{{step.armTemplatePayload | dump}}`)), getAnyJson([]byte(`{{step.armTemplateParametersPayload.parameters | dump}}`)))
+	{{deploymentVariable}}, err = createDeployment(ctx, "{{step.step}}", getAnyJson([]byte(`{{step.armTemplatePayload | dump}}`)), getAnyJson([]byte(`{}`)))
 	if err != nil {
 		t.Fatalf("%v\n %v", err, string(debug.Stack()))
 	}
