--- a/tools/sdk-testgen/packages/autorest.gotest/src/template/scenarioTest.go.njk
+++ b/tools/sdk-testgen/packages/autorest.gotest/src/template/scenarioTest.go.njk
@@ -44,7 +44,7 @@ var (
 {%- endfor %}
 )
 
-{%- for testScenario in testScenarios %}
+{%- for testScenario in scenarios %}
 func scenario{{jsFunc.descToTestname(testScenario.description)}}(t *testing.T) {
 	{%- for variable, value in testScenario.requiredVariablesDefault %}
 	{%- if not requiredVariablesDefault.hasOwnProperty(variable) %}
@@ -66,7 +66,7 @@ func prepare() {
 
 func Test{{testCaseName}}(t *testing.T) {
 	setUp()
-	{%- for testScenario in testScenarios %}
+	{%- for testScenario in scenarios %}
 	scenario{{jsFunc.descToTestname(testScenario.description)}}(t)
 	{%- endfor %}
 	tearDown()
